--- a/common-snippets/ES/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/ES/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "Etiqueta": "Si existe",
+    "label": "Si existe",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "Etiqueta": "Crear o Descartar (si ya existe)"
+        "label": "Crear o Descartar (si ya existe)"
       },
       "error_if_exist": {
-        "Etiqueta": "Crear Nuevo (lanza error si existe)"
+        "label": "Crear Nuevo (lanza error si existe)"
       },
       "error_if_not_exist": {
-        "Etiqueta": "Descartar (lanzar error si no existe)"
+        "label": "Descartar (lanzar error si no existe)"
       },
       "append_all": {
-        "Etiqueta": "Añadir todo"
+        "label": "Añadir todo"
       },
       "append_changes": {
-        "Etiqueta": "Añadir cambios"
+        "label": "Añadir cambios"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "Etiqueta": "Añadir marca de tiempo",
+    "label": "Añadir marca de tiempo",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "Etiqueta": "Nombre de la columna de la marca de tiempo",
+    "label": "Nombre de la columna de la marca de tiempo",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "Etiqueta": "Agregar Fila",
+    "label": "Agregar Fila",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "Etiqueta": "Nombre de la columna de la fila",
+    "label": "Nombre de la columna de la fila",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
