--- a/common-snippets/RU/DownloadSettings.json
+++ b/common-snippets/RU/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "Метка": "Настройки загрузки",
+    "label": "Настройки загрузки",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "Метка": "Указать местоположение",
+        "label": "Указать местоположение",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "Метка": "Отформатировано как таблица",
+        "label": "Отформатировано как таблица",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "Метка": "Видимость",
+        "label": "Видимость",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "Метка": "Текущий процесс"
+            "label": "Текущий процесс"
           },
           "all_flow": {
-            "Метка": "Все процессы"
+            "label": "Все процессы"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "Метка": "Вставить",
+        "label": "Вставить",
         "val": "content_only",
         "options": {
           "content_only": {
-            "Метка": "Только содержание"
+            "label": "Только содержание"
           },
           "fully_formatted": {
-            "Метка": "Полностью отформатированно"
+            "label": "Полностью отформатированно"
           }
         }
       }
